crates/solidity-v2/testing/snapshots/cst_output/TupleDeconstructionStatement/with_type/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected CloseParen. One of AtKeyword_Unreserved, CallDataKeyword_Reserved, ErrorKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, LayoutKeyword_Unreserved, MemoryKeyword_Reserved, RevertKeyword_Unreserved, StorageKeyword_Reserved, TransientKeyword_Unreserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/TupleDeconstructionStatement/with_type/input.sol:4:30 ]
   │
 4 │ (bool with_type, without_type) = rhs;
   │                              ┬  
   │                              ╰── Error occurred here.
───╯
